# mailbook-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7476a570439e_add_payment_events_email_id_unique.py  7b38789414f6_add_currency_column_to_payment_events_.py  fd60fc881b8e_initial_schema.py
app/adapter/inbound/api/: health_router.py  v1_router.py
app/common/exception/: app_exception.py  global_exception_handler.py
app/common/response/: base_response.py
app/domains/email/application/port/: email_connector_port.py  email_repository_port.py  oauth_token_storage_port.py
app/domains/email/application/request/: fetch_emails_request.py
app/domains/email/application/response/: email_response.py  oauth_url_response.py
app/domains/email/application/usecase/: complete_oauth.py  fetch_emails.py  start_oauth.py
app/domains/email/domain/entity/: email.py
app/domains/email/domain/value_object/: email_source.py  oauth_token.py  parsed_status.py
app/domains/email/infrastructure/mapper/: email_mapper.py  oauth_token_mapper.py
app/domains/email/infrastructure/orm/: email_orm.py
app/domains/merchant/application/response/: alias_response.py  (+1 more)
app/infrastructure/config/: logging_config.py  settings.py
app/infrastructure/database/: database.py
config/: card_companies.yaml  categories.yaml  merchants.yaml  parser_routes.yaml
tests/: conftest.py
tests/adapter/: test_health_router.py
tests/domains/email/adapter/: test_gmail_connector_helpers.py
tests/domains/merchant/domain/: test_alias_resolver.py
tests/domains/merchant/infrastructure/: test_yaml_loaders.py
tests/domains/payment_event/application/: test_parse_pending_emails.py
tests/domains/payment_event/domain/: test_parser_registry.py
tests/domains/payment_event/parsers/: test_anthropic_parser.py  test_trancy_parser.py
tests/domains/transaction/application/: test_resolve_solo_transactions.py
tests/domains/transaction/domain/: test_matching_engine.py
(+93 files in other folders)
