# pyproject.toml
# ─────────────────────────────────────────────────────────────────
# Python 프로젝트의 표준 메타데이터/설정 파일 (PEP 621 표준).
# uv, pip, poetry 같은 패키지 매니저들이 모두 이 파일을 읽는다.
# ─────────────────────────────────────────────────────────────────


[project]
name = "mailbook-backend"
version = "0.1.0"
description = "Mailbook backend service (FastAPI + Hexagonal + DDD)"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "greenlet>=3.5.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.30.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "anthropic>=0.40.0",
    "rapidfuzz>=3.10.0",
    "selectolax>=0.3.21",
    "pyyaml>=6.0.2",
]


[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-pyyaml>=6.0.12",
]


# ─────────────────────────────────────────────────────────────────
# [tool.*]
# ─────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E = pycodestyle 에러, F = pyflakes, W = pycodestyle 경고,
# I = isort (import 정렬), B = flake8-bugbear
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/versions/"]

# Domain 레이어는 추가로 더 엄격하게 (순수 Python 보장)
[[tool.mypy.overrides]]
module = "app.domains.*.domain.*"
disallow_any_explicit = true
disallow_untyped_calls = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"
